Fri Oct 17 14:30:23 1997  Von Welch  <vwelch@computer.ncsa.uiuc.edu>

	* server.c: progname was not getting set correctly. Use progname
	in call to setup_auth_context() to be consistant with client.

	* client.c: progname was not getting set correctly. Fixed bug in
	call to setup_auth_context() that caused failures with clients with
	instances in their names. 

	* auth_con.c (setup_auth_context): Use sin_port and not sin_addr
	in call to krb5_gen_portaddr(). This keeps us from having cache
	conflicts when krb525 and krb525d are running on the same machine.

Tue Oct  7 09:43:39 1997  Von Welch  <vwelch@computer.ncsa.uiuc.edu>

	* client.c (get_creds_with_keytab, get_creds_with_ccache): 
	Added options to passed arguments. Changed callers.
	Code will not make tickets from keytab forwardable.
	
Thu Oct  2 10:44:36 1997  Von Welch  <vwelch@computer.ncsa.uiuc.edu>

	* ChangeLog: Created ChangeLog file.

	* client.c [AFS_KRB5]: Added exec of aklog

	* acconfig.h: Added AFS_KRB5

	* configure.in: Check for using AFS-KRB5 migration kit and define
	AFS_KRB5 in config.h if we are.
